test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/assign_void_rval.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(10)
  ;
  identifier(a)
  =
  (
  void
  )
  const int(20)
  ;
  return
  const int(0)
  ;
  }
